@@ -2,6 +2,10 @@ yle-dl - download videos from Yle servers
 Copyright 2009-2022 Antti Ajanki
 Distributed under the GPL v3 or later
 
+Version <unreleased>
+
+- Support new live radio URLs containing /podcastit/
+
 Version 20220830
 
 - Fixed a crash if a title is missing
